Added Delete Job functionality with new UI Changes